# pycalculator

./: README.md  pyproject.toml
calc/: __init__.py  context.py  definitions.py  parser.py  tokenizer.py  utils.py
