[project]
name = "blurpit-calc"
version = "1.2.7"
authors = [
    { name="blurpit" }
]
description = "Calculator library that evaluates expressions, outputs & renders LaTeX, and graphs functions."
requires-python = ">=3.9"
readme = "README.md"
dependencies = ["numpy", "scipy", "matplotlib", "latex", "pdf2image"]
[project.urls]
"Homepage" = "https://github.com/blurpit/pycalculator"